--- a/springcloud-eureka/src/main/resources/application-prod1.yml
+++ b/springcloud-eureka/src/main/resources/application-prod1.yml
@@ -1,7 +1,7 @@
 SERVER_PORT: 22001
-EUREKA_HOST_2: 10.1.7.187
+EUREKA_HOST_2: 10.1.xx.187
 EUREKA_PORT_2: 22002
-EUREKA_HOST_3: 10.1.7.188
+EUREKA_HOST_3: 10.1.xx.188
 EUREKA_PORT_3: 22003
 
 spring:
