--- a/springcloud-eureka/src/main/resources/application-prod3.yml
+++ b/springcloud-eureka/src/main/resources/application-prod3.yml
@@ -1,7 +1,7 @@
 SERVER_PORT: 22003
-EUREKA_HOST_1: 10.1.7.186
+EUREKA_HOST_1: 10.1.x.186
 EUREKA_PORT_1: 22001
-EUREKA_HOST_2: 10.1.7.187
+EUREKA_HOST_2: 10.1.x.187
 EUREKA_PORT_2: 22002
 
 spring:
