--- a/springcloud-eureka/src/main/resources/application-prod2.yml
+++ b/springcloud-eureka/src/main/resources/application-prod2.yml
@@ -1,7 +1,7 @@
 SERVER_PORT: 22002
-EUREKA_HOST_1: 10.1.7.186
+EUREKA_HOST_1: 10.xxx.7.186
 EUREKA_PORT_1: 22001
-EUREKA_HOST_3: 10.1.7.188
+EUREKA_HOST_3: 10.xxx.7.188
 EUREKA_PORT_3: 22003
 
 spring:
