--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
     <modules>
         <module>springcloud-eureka</module>
         <module>springcloud-common</module>
+        <module>springcloud-rest</module>
+        <module>springcloud-strong</module>
     </modules>
 
     <properties>
@@ -33,6 +35,19 @@
     </properties>
 
     <dependencies>
+
+        <!--health监控-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <!--注册中心-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
         <!--swagger -->
         <dependency>
             <groupId>io.springfox</groupId>
@@ -52,10 +67,22 @@
             <optional>true</optional>
         </dependency>
 
+        <!--WEB-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
     </dependencies>
