--- a/springcloud-strong/src/main/resources/application-native.yml
+++ b/springcloud-strong/src/main/resources/application-native.yml
@@ -1,10 +1,13 @@
 
 server:
-  port: 10008
+  port: 1008
 spring:
   application:
     name: springcloud-strong
 eureka:
+  instance:
+    # 其中获取ip，SpringCloud2.0版本对应的key值为${spring.cloud.clent.ip-address},网上流传大多为${spring.cloud.clent.ipAddress}
+    instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
   client:
     serviceUrl:
       defaultZone: http://211.159.189.77:22001/eureka/,http://134.175.12.243:22002/eureka/
