--- a/springcloud-hystrix/pom.xml
+++ b/springcloud-hystrix/pom.xml
@@ -3,13 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.seal.feign</groupId>
-    <artifactId>springcloud-feign</artifactId>
+    <groupId>com.seal.hystrix</groupId>
+    <artifactId>springcloud-hystrix</artifactId>
     <version>${parent.version}</version>
     <packaging>jar</packaging>
 
-    <name>springcloud-feign</name>
-    <description>服务消费者(Feign)</description>
+    <name>springcloud-hystrix</name>
+    <description>断路器(Hystrix)</description>
 
     <parent>
         <artifactId>springcloud-code</artifactId>
@@ -24,13 +24,7 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
     </dependencies>
 
