--- a/springcloud-common/pom.xml
+++ b/springcloud-common/pom.xml
@@ -20,10 +20,18 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <kaptcha.version>0.0.9</kaptcha.version>
         <jackson-databind.version>2.9.9.2</jackson-databind.version>
     </properties>
 
     <dependencies>
+
+        <!--验证码-->
+        <dependency>
+            <groupId>com.github.axet</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>${kaptcha.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
