--- a/springcloud-config/src/main/resources/config/dev/springcloud-strong-dev.yml
+++ b/springcloud-config/src/main/resources/config/dev/springcloud-strong-dev.yml
@@ -1,9 +1,9 @@
-
 server:
-  port: 1004
+  port: 1008
+
 spring:
   application:
-    name: springcloud-rest
+    name: springcloud-strong
 eureka:
   instance:
     # 其中获取ip，SpringCloud2.0版本对应的key值为${spring.cloud.clent.ip-address},而不是网上流传大多为${spring.cloud.clent.ipAddress}
