--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>springcloud-feign</module>
         <module>springcloud-hystrix</module>
         <module>springcloud-zuul</module>
+        <module>springcloud-config</module>
         <module>springcloud-strong</module>
 
     </modules>
