--- a/springcloud-feign/pom.xml
+++ b/springcloud-feign/pom.xml
@@ -22,6 +22,12 @@
     </properties>
 
     <dependencies>
+        <!--配置中心客户端-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
