--- a/springcloud-rest/pom.xml
+++ b/springcloud-rest/pom.xml
@@ -23,6 +23,12 @@
 
     <dependencies>
 
+        <!--配置中心客户端-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
