--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
             <version>${springfox-swagger2.version}</version>
         </dependency>
 
+        <!--swagger - ui-->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
@@ -77,9 +78,6 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-
-
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
