--- a/springcloud-common/pom.xml
+++ b/springcloud-common/pom.xml
@@ -22,6 +22,7 @@
         <java.version>1.8</java.version>
         <kaptcha.version>0.0.9</kaptcha.version>
         <jackson-databind.version>2.9.9.2</jackson-databind.version>
+        <guava-version>18.0</guava-version>
     </properties>
 
     <dependencies>
@@ -37,6 +38,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson-databind.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava-version}</version>
         </dependency>
 
         <dependency>
