--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
         <java.version>1.8</java.version>
         <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
         <springfox-swagger-ui.version>2.9.2</springfox-swagger-ui.version>
+        <!--测试框架-->
+        <jmockit-version>1.38</jmockit-version>
     </properties>
 
     <dependencies>
@@ -88,6 +90,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jmockit</groupId>
+            <artifactId>jmockit</artifactId>
+            <version>${jmockit-version}</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
