--- a/springcloud-common/pom.xml
+++ b/springcloud-common/pom.xml
@@ -27,6 +27,11 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
         <!--验证码-->
         <dependency>
             <groupId>com.github.axet</groupId>
