--- a/springcloud-common/pom.xml
+++ b/springcloud-common/pom.xml
@@ -55,6 +55,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.ans</groupId>
+            <artifactId>ans-sdk</artifactId>
+            <version>1.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
