--- a/springcloud-common/src/main/resources/application.yml
+++ b/springcloud-common/src/main/resources/application.yml
@@ -4,5 +4,6 @@ spring:
   application:
     name: springcloud-comman
   redis:
-    host: 47.107.152.93
+    #host: 47.107.152.93
+    host: 192.168.1.28
     port: 6379
