--- a/springcloud-eureka/pom.xml
+++ b/springcloud-eureka/pom.xml
@@ -24,6 +24,12 @@
 
     <dependencies>
 
+        <!--注册中心-->
+        <!--<dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>-->
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
