--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,8 @@
         <module>springcloud-sleuth</module>
         <module>springcloud-strong</module>
         <module>springcloud-gateway</module>
-
+        <module>springcloud-consul-consumer</module>
+        <module>springcloud-consul-provider</module>
     </modules>
 
     <properties>
